force-app/main/default/objects/LP_Footer_Link__mdt/LP_Footer_Link__mdt.object-meta.xml
<CustomObject>
    <description>Used in Lumon Customer Portal, each country will have different urls in footer</description>
    <label>LP Footer Link</label>
    <pluralLabel>LP Footer Links</pluralLabel>
</CustomObject>