force-app/main/default/objects/LP_Footer_Link__mdt/fields/Country_Language__c.field-meta.xml
<CustomField>
    <fullName>Country_Language__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <inlineHelpText>Select country language for which the link should be generated. (default is English)</inlineHelpText>
    <label>Country Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en-US</fullName>
                <default>true</default>
                <label>English US</label>
            </value>
            <value>
                <fullName>fi</fullName>
                <label>Finnish</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>