force-app/main/default/objects/LP_Footer_Link__mdt/fields/Is_Main_Footer_Section__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Footer_Section__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If selected, link will be displayed in one of the main footers column section.</inlineHelpText>
    <label>Is Main Footer Section</label>
    <type>Checkbox</type>
</CustomField>