force-app/main/default/objects/LP_Footer_Link__mdt/fields/Link_Order__c.field-meta.xml
<CustomField>
    <fullName>Link_Order__c</fullName>
    <inlineHelpText>Specify order of the link displayed in individual footer section</inlineHelpText>
    <label>Link Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>