force-app/main/default/objects/LP_Footer_Link__mdt/fields/Link_Section__c.field-meta.xml
<CustomField>
    <fullName>Link_Section__c</fullName>
    <description>Each value from picklist represents footer area and its title. This way we can group individual links to footer columns and sections.</description>
    <inlineHelpText>Select what section should the footer URL be placed in.</inlineHelpText>
    <label>Link Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
                <default>true</default>
                <label>Residential</label>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
                <label>Registry and Privacy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>