force-app/main/default/objects/LP_Footer_Link__mdt/fields/Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Link_URL__c</fullName>
    <label>Link URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>